--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start cross-env LOGGER_LEVEL=info node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -41,20 +41,20 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-import-resolver-babel-module": "^5.0.1",
-    "eslint-import-resolver-typescript": "^1.1.1",
-    "eslint-plugin-prettier": "3.1.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recommended": "^2.1.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.6.0"
-  }
+    "devDependencies": {
+      "eslint": "^6.6.0",
+      "eslint-config-airbnb": "^18.2.0",
+      "eslint-plugin-import": "^2.22.0",
+      "eslint-plugin-jsx-a11y": "^6.3.1",
+      "eslint-plugin-react": "^7.20.6",
+      "eslint-plugin-react-hooks": "^4.1.0",
+      "eslint-config-prettier": "6.0.0",
+      "eslint-import-resolver-babel-module": "^5.0.1",
+      "eslint-import-resolver-typescript": "^1.1.1",
+      "eslint-plugin-prettier": "3.1.0",
+      "stylelint": "^9.10.1",
+      "stylelint-config-recommended": "^2.1.0",
+      "stylelint-config-styled-components": "^0.1.1",
+      "stylelint-processor-styled-components": "^1.6.0"
+    }
 }
