--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-alert": "off",
     "no-console": "off",
     "react/jsx-props-no-spreading": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "import/no-named-as-default": "off"
   }
 }
