--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
+    "@gabrielgvl/jwt_auth_react": "^0.2.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "4.2.1",
     "@material-ui/pickers": "^3.2.5",
@@ -14,6 +15,8 @@
     "axios": "^0.20.0",
     "axios-hooks": "^1.9.0",
     "color": "^3.1.2",
+    "history": "^5.0.0",
+    "lodash": "^4.17.20",
     "notistack": "^0.9.9",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
