--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "axios-hooks": "^1.9.0",
+    "chart.js": "^2.9.3",
+    "chartjs-adapter-date-fns": "^1.0.0",
     "color": "^3.1.2",
     "formik": "^2.1.5",
     "history": "^5.0.0",
