--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "chart.js": "^2.9.3",
     "chartjs-adapter-date-fns": "^1.0.0",
     "color": "^3.1.2",
+    "date-fns": "^2.16.1",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
     "notistack": "^0.9.9",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
