Institution Details and QR Code

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@gabrielgvl/jwt_auth_react": "^0.2.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.5",
     "@material-ui/styles": "^4.9.6",
     "@testing-library/jest-dom": "^4.2.4",
@@ -23,6 +24,7 @@
     "lodash": "^4.17.20",
     "notistack": "^0.9.9",
     "prop-types": "^15.7.2",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
