--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
+    "material-table": "^1.69.0",
     "notistack": "^0.9.9",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
