--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chartjs-adapter-date-fns": "^1.0.0",
     "color": "^3.1.2",
     "date-fns": "^2.16.1",
+    "emoji-mart": "^3.0.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
