--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
     "@gabrielgvl/jwt_auth_react": "^0.2.0",
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "4.2.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.5",
     "@material-ui/styles": "^4.9.6",
@@ -23,11 +23,12 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
-    "material-table": "^1.69.0",
+    "material-table": "1.63.1",
     "notistack": "^0.9.9",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
@@ -37,9 +38,6 @@
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
-  },
-  "resolutions": {
-    "material-table/jspdf": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start cross-env LOGGER_LEVEL=info node server.js",
