Started to implement safraAPI

--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ REACT_APP_USE_SECURE=
 
 # BACK-END API URL
 REACT_APP_API_URL=safra-payback.net:8080
+
+# SAFRA API URL
+REACT_SAFRA_API_URL=af3tqle6wgdocsdirzlfrq7w5m.apigateway.sa-saopaulo-1.oci.customer-oci.com/fiap-sandbox
+
+SAFRA_CLIENT_ID=f9d3cd9600874ac2803d03ca709b78eb
+SAFRA_SECRET_ID=1a2075e3-b15e-4324-902c-0f12f8f08082
