--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "@date-io/date-fns": "^1.3.9",
-    "@gabrielgvl/jwt_auth_react": "^0.2.0",
+    "@gabrielgvl/jwt_auth_react": "1.0.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -13,8 +14,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "auth0-js": "^9.14.0",
     "axios": "^0.20.0",
     "axios-hooks": "^1.9.0",
+    "axios-oauth-client": "^1.3.0",
+    "axios-token-interceptor": "^0.2.0",
     "chart.js": "^2.9.3",
     "chartjs-adapter-date-fns": "^1.0.0",
     "color": "^3.1.2",
